--- a/templates/game_not_found.html
+++ b/templates/game_not_found.html
@@ -2,4 +2,5 @@
 {% block content %}
 <h1>Game Not Found</h1>
 <p>{{ message }}</p>
+<p>The game might have been deleted or the date has passed.</p>
 {% endblock %}
