--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,10 @@
 {% if error %}<div class="error">{{ error }}</div>{% endif %}
 <form method="post" class="grid grid-2">
   <input type="hidden" name="csrf_token" value="{{ csrf_token(request) }}">
-  <div>
-    <label>Email</label>
-    <input type="email" name="email" required>
-  </div>
+<div>
+  <label>Email or Username</label>
+  <input type="text" name="email" required>
+</div>
   <div>
     <label>Password</label>
     <input type="password" name="password" required>
