--- a/templates/rsvp_thanks.html
+++ b/templates/rsvp_thanks.html
@@ -5,6 +5,9 @@
 {% if status == 'LATE' and late_eta %}
   <p>ETA: <strong>{{ late_eta }}</strong></p>
 {% endif %}
+{% if seat_number %}
+  <p>Your seat number: <strong>#{{ seat_number }}</strong></p>
+{% endif %}
 <p>{{ game['title'] }} • {{ game['game_date'] }} at {{ game['game_time'] }}</p>
 <script>
   localStorage.setItem('poker_rsvp_{{ game["code"] }}', '{{ status }}');
