--- a/templates/create_game.html
+++ b/templates/create_game.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Create Game</h1>
-<p>Organizer is included in total players. Add your display name below.</p>
+<p>Organizer is included in total players. Seats are assigned randomly when players RSVP.</p>
 {% if error %}<div class="error">{{ error }}</div>{% endif %}
 <form method="post" class="grid grid-2">
   <input type="hidden" name="csrf_token" value="{{ csrf_token(request) }}">
@@ -24,10 +24,6 @@
   <div>
     <label>Total Players</label>
     <input type="number" name="total_players" min="1" required value="{{ last_game['total_players'] if last_game else '' }}">
-  </div>
-  <div>
-    <label>Host Seat (optional)</label>
-    <input type="number" name="host_seat" min="1" placeholder="Leave blank for random">
   </div>
   <div>
     <label>Organizer Display Name</label>
